--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <!-- <script defer src="app2.js"></script> -->
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         </div>
 
         <div class="result">
-            <p id="result"></p>
+            <p id="result">Clique em uma das imagens</p>
         </div>
 
         <div class="buttons">
@@ -29,10 +30,11 @@
         </div>
 
         <footer>
-            <p>Make your choice.</p>
+            <p>Faça sua jogada.</p>
         </footer>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
+    <!-- <script type="text/javascript" src="app.js"></script> -->
 </body>
 
 </html>
